# pixelforge-studio

./: .editorconfig  .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
i18n/: en.json  tr.json
scripts/: build_logo.py  take_screenshots.py
src/pixelforge/: __init__.py  __main__.py  app.py  config.py  i18n.py  logger.py
src/pixelforge/core/: __init__.py  compressor.py  converter.py  exceptions.py  models.py  pipeline.py  resizer.py
src/pixelforge/ui/: __init__.py  main_window.py  theme.py
src/pixelforge/ui/widgets/: __init__.py  drop_zone.py  error_dialog.py  file_queue.py  log_viewer.py  settings_panel.py  status_bar.py
src/pixelforge/utils/: __init__.py  exif.py  formats.py  humanize.py  paths.py
src/pixelforge/workers/: __init__.py  batch_worker.py
tests/: conftest.py
tests/integration/: test_edge_cases.py
tests/unit/: test_compressor.py  test_converter.py  test_exceptions.py  test_formats.py  test_pipeline.py  test_resizer.py
