[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelforge"
version = "1.0.0"
description = "Professional image conversion, resizing, and compression — Azerbaijani-native desktop app"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "PixelForge Studio" }]
keywords = ["image", "converter", "resizer", "compressor", "gui", "azerbaijani"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "customtkinter>=5.2.2",
    "Pillow>=10.2.0",
    "tkinterdnd2>=0.4.2",
    "pillow-heif>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
pixelforge = "pixelforge.__main__:main"

[project.urls]
Homepage = "https://github.com/goshgarhasanov/pixelforge-studio"
Issues = "https://github.com/goshgarhasanov/pixelforge-studio/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pixelforge = ["assets/**/*", "i18n/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
